it checks files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5"
+regex = "1.6"
+anyhow = "1.0"
+shellexpand = "2.1"
 
 [[bin]]
+path = "src/main.rs"
 name = "shd"
