--- a/shinydir.toml
+++ b/shinydir.toml
@@ -11,37 +11,39 @@ color = true # color terminal output
 
 [dir."$HOME"]
 allowed-dirs = [
-    "Downloads",
-    "Pictures",
-    "Desktop",
-    "Videos",
-    "Music",
-    "Documents",
-    "\.*", # allow any hidden directory
+    { name = "Downloads" },
+    { name = "Pictures" },
+    { name = "Desktop" },
+    { name = "Videos" },
+    { name = "Music" },
+    { name = "Documents" },
+    { pattern = "^\\." }, # allow any hidden directory
 ]
 allowed-files = [
-    "\.*", # allow any hidden file
+    { pattern = "^\\." }, # allow any hidden file
 ]
 
 [dir."$HOME/Videos"]
-recursive-rules = true # sub-folders will have the same rules
+recursive = true # sub-folders will have the same rules
 # no 'allowed-dirs' means any dir is valid
 allowed-files = [
-    "*\.(mp4|mov|mkv)$"
+    { ext = "mp4" },
+    { ext = "mov" },
+    { ext = "mkv" },
 ]
 
-[dir."$HOME/Music"]
-recursive-rules = true
-allowed-files = [
-    "*\.(mp3|m4a|flac|opus)$"
-]
+# [dir."$HOME/Music"]
+# recursive = true
+# allowed-files = [
+#     ".*\\.(mp3|m4a|flac|opus)$"
+# ]
 
-[dir."$HOME/Downloads"]
-allowed-dirs = [
-    "Videos",
-    "Music",
-    "Misc",
-]
+# [dir."$HOME/Downloads"]
+# allowed-dirs = [
+#     "Videos",
+#     "Music",
+#     "Misc",
+# ]
 # no 'allow-files' means any file is valid
 
 #----------------------------#
@@ -50,12 +52,12 @@ allowed-dirs = [
 
 [[automove.rules]]
 parent = "$HOME/Downloads"
-match = "*\.(mp3|m4a|flac|opus)$"
+match = ".*\\.(mp3|m4a|flac|opus)$"
 to = "$HOME/Downloads/Music"
 
 [[automove.rules]]
 parent = "$HOME/Downloads"
-match = "*\.(mp4|mov|mkv)$"
+match = ".*\\.(mp4|mov|mkv)$"
 to = "$HOME/Downloads/Videos"
 
 [[automove.rules]]
