--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ regex = "1.6"
 anyhow = "1.0"
 shellexpand = "2.1"
 clap = { version = "4.0", features = ["derive"] }
+colored = "2.0"
 
 [[bin]]
 path = "src/main.rs"
