--- a/shinydir.toml
+++ b/shinydir.toml
@@ -62,41 +62,43 @@ report-info = "count" # display how many files could be
                       # automatically moved at the end of a report
                       # options are: "no", "any", "count"
 
-[[automove.rules]]
-name = "Home-Videos" # give a name to the rule otherwise it will dispaly the path of `parent`
-                     # since several rules can have the same parent, it's recommended
-                     # to give a name to every rule
-parent = "$HOME"
-match = [
-    { ext = "mp4" },
-    { ext = "mov" },
-    { ext = "mkv" },
-]
-to = "$HOME/Videos"
+force-dry-run = true # force dry run setting
+                     # This is a security for new users. Turn it off (= false) to use auto-move!
 
-[[automove.rules]]
-name = "Home-Music"
-parent = "$HOME"
-match = [
-    { ext = "mp3" },
-    { ext = "m4a" },
-    { ext = "opus" },
-    { ext = "flac" },
-]
-to = "$HOME/Music"
+# [[automove.rules]]
+# name = "Home-Videos" # give a name to the rule otherwise it will dispaly the path of `parent`
+#                      # since several rules can have the same parent, it's recommended
+#                      # to give a name to every rule
+# parent = "$HOME"
+# match = [
+#     { ext = "mp4" },
+#     { ext = "mov" },
+#     { ext = "mkv" },
+# ]
+# to = "$HOME/Videos"
 
-[[automove.rules]]
-name = "Screenshots"
-parent = "$HOME/Pictures/Screenshots"
-match = [
-    { ext = "png" },
-    { ext = "jpg" },
-]
-to = "$HOME/Pictures/Screenshots"
+# [[automove.rules]]
+# name = "Home-Music"
+# parent = "$HOME"
+# match = [
+#     { ext = "mp3" },
+#     { ext = "m4a" },
+#     { ext = "opus" },
+#     { ext = "flac" },
+# ]
+# to = "$HOME/Music"
 
-# pass each matched file to the following script that returns placement filename
-# the script path is relative to the parent directory of this config file
-# Note: `to` is still required! It will be the base path of any relative filename the script returns.
-#       However, the script is free to return absolute paths in which case `to` will be ignored
-# WARNING! This can slow down auto-move drastically, use with care! (it will not slow down count check report info count though)
-to-script = "examples/dated-monthly.sh"
+# [[automove.rules]]
+# name = "Screenshots"
+# parent = "$HOME/Pictures/Screenshots"
+# match = [
+#     { ext = "png" },
+#     { ext = "jpg" },
+# ]
+# to = "$HOME/Pictures/Screenshots"
+# # pass each matched file to the following script that returns placement filename
+# # the script path is relative to the parent directory of this config file
+# # Note: `to` is still required! It will be the base path of any relative filename the script returns.
+# #       However, the script is free to return absolute paths in which case `to` will be ignored
+# # WARNING! This can slow down auto-move drastically, use with care! (it will not slow down count check report info count though)
+# to-script = "examples/dated-monthly.sh"
