--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,6 +30,7 @@ jobs:
             binary: shinydir            
     runs-on: ${{matrix.os}}
     steps:
+      - uses: actions/checkout@v2
       - name: Set up cargo cache
         uses: actions/cache@v3
         continue-on-error: false
